# Mesh-Bot

./: Makefile  main.py  pyproject.toml  requirements.txt  test.ipynb
dnevniklib/calendar/: calendar.py
dnevniklib/homeworks/: homeworksWrap.py
dnevniklib/marks/: marks.py  marksWrap.py
dnevniklib/notification/: notification.py  notificationWrap.py
dnevniklib/schedule/: schedule.py
dnevniklib/types/: event.py  homework.py  marks.py  schedule_entity.py
tg_bot/: global_state.py
tg_bot/handlers/: date_selection.py  keyboards.py  process_homework.py  process_marks.py  process_notifications.py  process_schedule.py  profile.py  start.py  swap_calendar.py  token.py
