[tool.poetry]
name = "Mesh-Bot"
version = "0.1.0"
description = ""
authors = ["ttravv <alegofnik@gmail.com>]
readme = ""
packages = [{include = "Mesh-Bot"}]


[tool.poetry.dependecies]
python = "3.12.5"
aiofiles = "24.1.0"
aiogram="3.13.1"
aiohappyeyeballs="2.4.0"
aiohttp="3.10.5"
aiosignal="1.3.1"
annotated-types="0.7.0"
appnope="0.1.4"
asttokens="2.4.1"
attrs="24.2.0"
certifi="2024.8.30"
charset-normalizer="3.3.2"
comm="0.2.2"
debugpy="1.8.6"
decorator="5.1.1"
environs="11.0.0"
executing="2.1.0"
frozenlist="1.4.1"
idna="3.10"
magic-filter="1.0.12"
marshmallow="3.22.0"
matplotlib-inline="0.1.7"
multidict="6.1.0"
nest-asyncio="1.6.0"
packaging="24.1"
parso="0.8.4"
pexpect="4.9.0"
platformdirs="4.3.6"
prompt_toolkit="3.0.48"
psutil="6.0.0"
ptyprocess="0.7.0"
pure_eval="0.2.3"
pydantic="2.9.2"
pydantic_core="2.23.4"
Pygments="2.18.0"
python-dateutil="2.9.0"
python-dotenv="1.0.1"
pyzmq="26.2.0"
requests="2.32.3"
six="1.16.0"
stack-data="0.6.3"
tornado="6.4.1"
traitlets="5.14.3"
typing_extensions="4.12.2"
urllib3="2.2.3"
wcwidth="0.2.13"
yarl="1.11.1"


[build.system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"